UPDATE to node18 & puppeteer18, minor fix on memory rm

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@ PDF_PATH=""
 DOCS_URL=""
 NEXT_PAGE_SELECTOR=""
 
-# Setting this to false will speed up the process, but may break on documentation sites that rely on lazy loading.
-HAS_LAZY_LOADING=true
+# Setting this to 0 will speed up the process, but may break on documentation sites that rely on lazy loading.
+EXTRA_LOAD_WAIT_TIME=3000
